# pytip

./: .cspell_dict.txt  .gitignore  .pre-commit-config.yaml  README.md  cspell.config.yaml  setup.cfg
src/pytip/: __main__.py
src/pytip/tips/: __init__.py  dict_get_value_default.md  functools-lru_cache.md  functools-partial.md
