[metadata]
name = pytip
description = A bot for posting tips and tricks about tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/finsberg/pytip
author = Henrik Finsberg
author_email = henriknf@simula.no
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = python, tips

[options]
packages = find:
install_requires =
    typer
    rich
package_dir =
    =src
python_requires = >=3.6
zip_safe = False

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    black
    bump2version
    flake8
    ipython
    mypy
    pdbpp
    pre-commit
test =
    black
    flake8
    mypy
    pytest
    pytest-cov

[options.package_data]
pytip.tips = *.md


[bdist_wheel]
universal = 1

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=src/pytip --cov-report html --cov-report xml --cov-report term-missing --hypothesis-show-statistics -v
testpaths =
    tests

[mypy]
files = pulse,tests
ignore_missing_imports = true
